# ETL-with-Automated-QA

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
etl_challenge/: __init__.py
etl_challenge/alerts/: __init__.py  dispatcher.py
etl_challenge/audit/: __init__.py  checks.py
etl_challenge/contracts/: __init__.py  customer.py  transaction.py
etl_challenge/data/: __init__.py  mock_data.py
etl_challenge/ingestion/: __init__.py  loader.py
etl_challenge/reporting/: __init__.py  report.py
etl_challenge/transforms/: __init__.py  pipeline.py
notebooks/: poc.ipynb
tests/: __init__.py  conftest.py
tests/functional/: test_alerts.py
tests/integration/: test_pipeline.py
tests/unit/: test_checks.py  test_contracts.py  test_reporting.py
